--- a/style.css
+++ b/style.css
@@ -252,7 +252,10 @@ width: 100%;
         height: 100%;
     }
   nav{
-    padding: 1rem 0.2rem;
+    padding: 1rem 0.4rem;
+  }
+.links{
+    gap:0.7rem;
   }
   nav h1 a{
     font-size: 1.1rem;
